// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Development Page Components DontTest DevAccForItems 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <h4>
    Accessibility Guidelines
  </h4>
  <div
    className="row"
  >
    <a
      href="https://portal.smarterbalanced.org/library/en/general-accessibility-guidelines.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      General Accessibility
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/guidelines-for-accessibility-for-english-language-learners.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Accessibility for ELLs
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/signing-guidelines.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Signing Guidelines
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/tactile-accessibility-guidelines.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Tactile Guidelines
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/bias-and-sensitivity-guidelines.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Bias and Sensitivity
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
  </div>
  <h4>
    Audio Guidelines
  </h4>
  <div
    className="row"
  >
    <a
      href="https://portal.smarterbalanced.org/library/en/ela-audio-guidelines.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      ELA
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href=""
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Math
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
  </div>
  <h4>
    Scoring Guides
  </h4>
  <div
    className="row"
  >
    <a
      href="https://portal.smarterbalanced.org/library/en/scoring-guide-for-selected-short-text-mathematics-items.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Short-Text Math
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/scoring-guide-for-ela-full-writes.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      ELA Full Writes
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
  </div>
  <h4>
    Miscellaneous Guidelines
  </h4>
  <div
    className="row"
  >
    <a
      href="https://portal.smarterbalanced.org/library/en/mathematics-guidelines-for-inclusion-of-measurement-conversions-and-formulas.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Formulas & Conversations
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/calculator-availability-for-operational-assessments.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Calculator Availability
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/style-guide-for-smarter-balanced-assessments.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Style Guide for Assessments
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/classroom-activities-faq-and-guidance.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Classroom Activities FAQ
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
  </div>
  <style
    jsx={true}
  >
    
  </style>
</div>
`;

exports[`Storyshots Development Page Components DontTest DevAddtlItemSpec 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <h4>
    ELA Stimulus Specifications
  </h4>
  <div
    className="row"
  >
    <a
      href="https://portal.smarterbalanced.org/library/en/ela-stimulus-specifications.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      ELA Stimulus Specifications
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
  </div>
  <h4>
    Additional Guidelines
  </h4>
  <div
    className="row"
  >
    <a
      href="https://portal.smarterbalanced.org/library/en/mathematics-guidelines-for-inclusion-of-measurement-conversions-and-formulas.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Formulas and Conversions
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/bias-and-sensitivity-guidelines.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Bias and Sensitivity
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
  </div>
  <h4>
    Calculator Availability by Grade Level
  </h4>
  <div
    className="row"
  >
    <a
      href="https://portal.smarterbalanced.org/library/en/calculator-availability-for-operational-assessments.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Calculator Availability
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
  </div>
  <h4>
    Elaborations for ELA PT Full Writes
  </h4>
  <div
    className="row"
  >
    <a
      href="https://portal.smarterbalanced.org/library/en/performance-task-writing-rubric-opinion.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Opinion
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/performance-task-writing-rubric-narrative.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Narrative
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
  </div>
  <h4>
    Elaborations for ELA Full Writes
  </h4>
  <div
    className="row"
  >
    <a
      href=""
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Informational/ Explanitory
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/performance-task-writing-rubric-argumentative.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Argumentative
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
  </div>
  <style
    jsx={true}
  >
    
  </style>
</div>
`;

exports[`Storyshots Development Page Components DontTest DevContentSpec 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <p>
    Smarter Balanced has developed content specifications in English language arts/literacy and math to ensure that the assessments cover the range of knowledge and skills in the Common Core State Standards. The content specifications serve as the basis for the Smarter Balanced system of summative and interim assessments and formative assessment support for teachers. Dr. Linda Darling-Hammond, former Smarter Balanced Senior Research Advisor and Charles E. Ducommun Professor of Education Emeritus at Stanford University, led the development of the content specifications in collaboration with experts in the field. The Smarter Balanced Technical Advisory Committee, Consortium work groups, and the lead authors of the Common Core State Standards also contributed to the documents. Hundreds of organizations and individual stakeholders provided feedback during two rounds of public comment.
  </p>
</div>
`;

exports[`Storyshots Development Page Components DontTest DevFullItemSpec 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    className="row"
  >
    <a
      href=""
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      ELA
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href=""
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Mathematics
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href=""
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      CAT
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href=""
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Performance Tasks
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href=""
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      ELA for Grades 3-5
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href=""
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      ELA for Grades 6-8
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href=""
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      ELA for High School
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <style
      jsx={true}
    >
      
    </style>
  </div>
</div>
`;

exports[`Storyshots Development Page Components DontTest DevInterimBlueprint 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="right-margin"
    >
      <h4>
        Interim Assessments Overview
      </h4>
      <div
        className="row"
      >
        <a
          href="https://portal.smarterbalanced.org/library/en/interim-assessments-overview.pdf"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            fill="none"
            height={40}
            stroke="#ffffff"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={40}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
            />
            <polyline
              points="14 2 14 8 20 8"
            />
            <line
              x1="16"
              x2="8"
              y1="13"
              y2="13"
            />
            <line
              x1="16"
              x2="8"
              y1="17"
              y2="17"
            />
            <polyline
              points="10 9 9 9 8 9"
            />
          </svg>
          <br />
          Overview
        </a>
        <style
          jsx={true}
        >
          
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
        </style>
      </div>
    </div>
    <div
      className="right-margin"
    >
      <h4>
        Interim Assessment Block (IAB) Blueprints
      </h4>
      <div
        className="row"
      >
        <a
          href="https://portal.smarterbalanced.org/library/en/english-language-artsliteracy-interim-assessment-blocks-fixed-form-blueprint.pdf"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            fill="none"
            height={40}
            stroke="#ffffff"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={40}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
            />
            <polyline
              points="14 2 14 8 20 8"
            />
            <line
              x1="16"
              x2="8"
              y1="13"
              y2="13"
            />
            <line
              x1="16"
              x2="8"
              y1="17"
              y2="17"
            />
            <polyline
              points="10 9 9 9 8 9"
            />
          </svg>
          <br />
          ELA/Literacy IAB Blueprint
        </a>
        <style
          jsx={true}
        >
          
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
        </style>
        <a
          href="https://portal.smarterbalanced.org/library/en/math-interim-assessment-blocks-blueprint.pdf"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            fill="none"
            height={40}
            stroke="#ffffff"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={40}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
            />
            <polyline
              points="14 2 14 8 20 8"
            />
            <line
              x1="16"
              x2="8"
              y1="13"
              y2="13"
            />
            <line
              x1="16"
              x2="8"
              y1="17"
              y2="17"
            />
            <polyline
              points="10 9 9 9 8 9"
            />
          </svg>
          <br />
          Mathematics IAB Blueprint
        </a>
        <style
          jsx={true}
        >
          
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
        </style>
      </div>
    </div>
    <div
      className="right-margin"
    >
      <h4>
        Interim Comprehensive Assessment (ICA) Blueprints
      </h4>
      <div
        className="row"
      >
        <a
          href="https://portal.smarterbalanced.org/library/en/ela-literacy-interim-comprehensive-assessment-blueprint.pdf"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            fill="none"
            height={40}
            stroke="#ffffff"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={40}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
            />
            <polyline
              points="14 2 14 8 20 8"
            />
            <line
              x1="16"
              x2="8"
              y1="13"
              y2="13"
            />
            <line
              x1="16"
              x2="8"
              y1="17"
              y2="17"
            />
            <polyline
              points="10 9 9 9 8 9"
            />
          </svg>
          <br />
          ELA/Literacy ICA Blueprint
        </a>
        <style
          jsx={true}
        >
          
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
        </style>
        <a
          href="https://portal.smarterbalanced.org/library/en/mathematics-interim-comprehensive-assessment-blueprint.pdf"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            fill="none"
            height={40}
            stroke="#ffffff"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={40}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
            />
            <polyline
              points="14 2 14 8 20 8"
            />
            <line
              x1="16"
              x2="8"
              y1="13"
              y2="13"
            />
            <line
              x1="16"
              x2="8"
              y1="17"
              y2="17"
            />
            <polyline
              points="10 9 9 9 8 9"
            />
          </svg>
          <br />
          Mathematics ICA Blueprint
        </a>
        <style
          jsx={true}
        >
          
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
        </style>
      </div>
    </div>
    <style
      jsx={true}
    >
      
    </style>
    <style
      jsx={true}
    >
      
      .right-margin {
        margin-right: 20px;
      }
    
    </style>
  </div>
</div>
`;

exports[`Storyshots Development Page Components DontTest DevIntroELAContentSpec 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <p>
    Vivamus posuere vestibulum ligula, vitae tristique sem aliquam ac. Vivamus nec libero a ex faucibus consequat. Mauris nulla risus, finibus eget maximus at, volutpat id dui. Ut sollicitudin nibh ac enim lobortis vulputate. Aenean volutpat justo lorem, et rutrum diam mattis id. Morbi risus odio, suscipit sit amet ipsum et, tincidunt tincidunt urna. Nam quis sapien tortor. In lacinia nulla et augue placerat pulvinar.
  </p>
</div>
`;

exports[`Storyshots Development Page Components DontTest DevIntroMathContentSpec 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <p>
    Aliquam erat volutpat. Nulla consectetur malesuada ante, id volutpat erat. Suspendisse eu sodales leo, nec vulputate lectus. Curabitur laoreet, velit ac aliquam posuere, ante velit molestie elit, in rutrum enim urna ut lacus. Praesent lacinia orci at aliquet iaculis. Morbi quis imperdiet ante. Fusce ut lobortis quam. Mauris quis libero luctus, porttitor nulla eu, feugiat risus. Aliquam erat volutpat. Pellentesque sit amet ullamcorper quam.
  </p>
  <div
    className="row"
  >
    <a
      href="https://portal.smarterbalanced.org/library/en/english-language-artsliteracy-content-specifications.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      ELA/Literacy Content Specifications
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/ela-stimulus-specifications.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      ELA Stimulus Specifications
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/mathematics-content-specifications.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Mathematics Content Specifications
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href=""
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Content Specifications Full Download
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <style
      jsx={true}
    >
      
    </style>
  </div>
</div>
`;

exports[`Storyshots Development Page Components DontTest DevItemSpecOverview 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <h4>
    Performance Task Specifications Overview
  </h4>
  <p>
    The Performance Tasks in English language arts (ELA) and mathematics will provide measures of students’ achievement (proficiency in meeting grade-level standards), academic growth, and progress toward college and career readiness. The domain of performance assessment is quite broad, encompassing a range of response tasks. A Smarter Balanced performance task involves significant interaction of students with stimulus materials and/or engagement in a problem solution, ultimately leading to an exhibition of the students’ application of knowledge and skills, often in writing or spoken language. Stimuli include a variety of information forms, as well as an assignment or problem situation.
  </p>
  <h4>
    CAT Item Specifications Overview
  </h4>
  <p>
    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
  </p>
  <div
    className="row"
  >
    <a
      href="https://portal.smarterbalanced.org/library/en/performance-tasks-specifications.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Performance Tasks Specifications
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href=""
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      CAT Item Specifications
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/item-and-task-specifications-bibliography.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Bibliography
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
  </div>
  <style
    jsx={true}
  >
    
  </style>
</div>
`;

exports[`Storyshots Development Page Components DontTest DevTestBlueprint 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <p>
    The Smarter Balanced summative test blueprints describe the content of the English language arts/literacy and math summative assessments for grades 3-8 and high school - and how that content will be assessed. Developed with broad input from member states, partners, and stakeholders, the summative test blueprints reflect the depot and breadth of the performance expectations of the Common Core State Standards. Smarter Balanced Governing Members adopted the preliminary test blueprints in 2012 and the summative test blueprints reflect refinements and revisions after the analysis of the Pilot and Field Tests. The test blueprints include critical information about the number of questions, score points, and depth of knowledge for items associated with each assessment target. They will continue to guide the development of questions and performance tasks, score reporting, and ongoing research.
  </p>
  <div
    className="row"
  >
    <a
      href="https://portal.smarterbalanced.org/library/en/elaliteracy-summative-assessment-blueprint.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      ELA/Literacy Blueprint
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/mathematics-summative-assessment-blueprint.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Mathematics Blueprint
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/estimated-testing-times.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Estimated Testing Times
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
    <a
      href="https://portal.smarterbalanced.org/library/en/2018-19-enhanced-cat-blueprints-eft-pt.pdf"
      rel="noopener noreferrer"
      role="button"
      target="_blank"
    >
      <svg
        fill="none"
        height={40}
        stroke="#ffffff"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={40}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
        />
        <polyline
          points="14 2 14 8 20 8"
        />
        <line
          x1="16"
          x2="8"
          y1="13"
          y2="13"
        />
        <line
          x1="16"
          x2="8"
          y1="17"
          y2="17"
        />
        <polyline
          points="10 9 9 9 8 9"
        />
      </svg>
      <br />
      Enhanced CAT Blueprints
    </a>
    <style
      jsx={true}
    >
      
      a {
        color: #ffffff;
        margin: 2px;
        padding: 12px 0;
        background: linear-gradient(90deg, #006298, #0085AD);
        border-radius: 10px;
        width: 100px;
        text-align: center;
        font-size: 0.8em;
        text-decoration: none;
      }
    
    </style>
  </div>
  <style
    jsx={true}
  >
    
  </style>
</div>
`;

exports[`Storyshots Development Page Components DontTest Overview 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <p>
      "Test Development and Design" is the title given to the full-cycle of constructing all assessment. Smarter Balanced development process involves educators at every stage. Along with creating an innovative assessment, Smarter Balanced is committed to an unprecedented level of transparency, so that anyone who is interested can see exactly how the test is made.
    </p>
    <p>
      On this page we provide the following materials used in the process of developing the Smarter Balanced assessment system.
    </p>
    <ul>
      <li>
        Summative Test Blueprints
      </li>
      <li>
        Interim Assessment Overview and Blueprints
      </li>
      <li>
        Item Specifications, Accessibility, and Guidelines
      </li>
      <li>
        Content Specifications
      </li>
    </ul>
  </div>
</div>
`;
